--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p class="u-custom-font u-font-open-sans u-text u-text-2"> The AMLBot platform automates AML / KYC procedures and reduces compliance expenses<span style="font-weight: 500;"><span style="font-weight: 500;"></span></span>
         </p>
         <img class="custom-expanded u-image u-image-contain u-image-default u-image-1" src="images/image_42.png" alt="" data-image-width="1680" data-image-height="1040">
-        <a id="open-connect-modal" class="u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-1 u-hover-feature u-radius u-btn-1 action-btn"><span style="font-weight: 500;">VEREFY YOUR WALLET ON AML&nbsp;</span><span style="font-weight: 600;">FOR FREE</span>
+        <a id="open-connect-modal" class="u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-1 u-hover-feature u-radius u-btn-1 action-btn open-connect-modal"><span style="font-weight: 500;">VEREFY YOUR WALLET ON AML&nbsp;</span><span style="font-weight: 600;">FOR FREE</span>
         </a>
         <img class="u-expanded-width-xs u-image u-image-default u-image-2" src="images/image1.png" alt="" data-image-width="926" data-image-height="194">
         <img class="u-image u-image-default u-image-3" src="images/2025-05-02191242.png" alt="" data-image-width="1273" data-image-height="346">
